elastalert2/manifests/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elastalert2
  namespace: elastic-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: elastalert2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: elastalert2
    spec:
      nodeSelector:
        node-type: elk
      tolerations:
        - key: "dedicated"
          operator: "Equal"
          value: "elk"
          effect: "NoSchedule"
      containers:
        - name: elastalert2
          image: jertel/elastalert2:2.12.0
          args:
            - --config
            - /config/config.yaml
          volumeMounts:
            - name: config
              mountPath: /config
            - name: es-ca
              mountPath: /certs
              readOnly: true
      volumes:
        - name: templates
          configMap:
            name: elastalert2-templates
        - name: config
          emptyDir: {}
        - name: es-ca
          secret:
            secretName: elk-es-http-certs-public
            items:
              - key: ca.crt
                path: ca.crt
