elastalert2/manifests/03-mailhog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailhog
  namespace: elastic-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mailhog
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mailhog
    spec:
      nodeSelector:
        node-type: elk
      tolerations:
        - key: "dedicated"
          operator: "Equal"
          value: "elk"
          effect: "NoSchedule"
      containers:
        - name: mailhog
          image: mailhog/mailhog:v1.0.1
          ports:
            - name: smtp
              containerPort: 1025
            - name: http
              containerPort: 8025
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: mailhog
  namespace: elastic-system
spec:
  selector:
    app.kubernetes.io/name: mailhog
  ports:
    - name: smtp
      port: 1025
      targetPort: smtp
    - name: http
      port: 8025
      targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailhog-ingress
  namespace: elastic-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - mailhog.dev.tests.software
      secretName: mailhog-tls
  rules:
    - host: mailhog.dev.tests.software
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mailhog
                port:
                  number: 8025
